fix defect: hidden overflowed words.

--- a/src/app/less/main.less
+++ b/src/app/less/main.less
@@ -373,6 +373,9 @@
 		font-weight: bold;
 		color: #333;
 		padding-left: 45px;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		overflow: hidden;
 	}
 	.drip-ui-article-date {
 		color: #999;
